# nano-os

./: .gitignore  Makefile  README.md  RELEASE.md  ROADMAP.md  boot.asm  digest.txt  linker.ld
.github/workflows/: release.yml
docs/: driver_api.md  memory_architecture.md  nano_shell.md
include/: ata.h  cache.h  cpu.h  elf.h  fat32.h  font8x8.h  gdt.h  graphics.h  initrd.h  ipc.h  kmalloc.h  mascot.hpp  mouse.h  nanolib.h  panic.h  pci.h  pmm.h  ports.h  rtc.h  rust_interface.h  screen.h  shell.h  signal.h  syscall.h  task.h  timer.h  util.h  vbe.h  vfs.h  vga_screen.hpp
libc/include/: stdio.h  stdlib.h  string.h  unistd.h
libc/include/sys/: syscall.h
libc/src/: crt0.asm  stdio.c  stdlib.c  string.c  syscall.c  unistd.c
rust_kernel/: Cargo.toml  build.rs  i686-nano_os.json
rust_kernel/.cargo/: config.toml
rust_kernel/src/: lib.rs
src/: ata.c  cache.c  cpp_runtime.cpp  cpu.c  elf.c  fat32.c  gdt.c  graphics.cpp  initrd.c  interrupt.asm  ipc.c  kernel.c  kernel.cpp  kernel_entry.asm  keyboard.c  kmalloc.c  mascot.cpp  mouse.c  panic.cpp  pci.c  pmm.c  ports.c  rtc.c  screen.c  shell.c  syscall.c  task.c  timer.c  util.c  vfs.c  vga_screen.cpp  zig_module.zig
src/shell/: cnode.c  commands.c  shell.c
tests/: test_util.c  user_hello.c  user_ipc_demo.c  user_malloc_test.c  user_prime.c
tools/: make_initrd.c  ncc.c
